<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2015 Julijonas Kikutis

  This file is part of Libre Explorer.

  Libre Explorer is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Libre Explorer is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Libre Explorer.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!-- General -->
    <string name="app_name">Libre Explorer</string>
    <string name="app_description">File manager for Android</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Directory -->
    <string name="paste">Paste</string>
    <string name="directory_up">Up</string>
    <string name="broken_link">Broken symbolic link</string>
    <string name="file_image">File image</string>

    <string name="sort_by">Sort by</string>
    <string name="ascending" translatable="false">A-Z</string>
    <string name="descending" translatable="false">Z-A</string>
    <string-array name="sort_fields">
        <item>Name</item>
        <item>Size</item>
        <item>Extension</item>
        <item>Modified</item>
    </string-array>

    <!-- Opening -->
    <string name="open_with">Open with</string>
    <string name="open_with_more">More</string>

    <string name="open_as">Open as</string>
    <string-array name="file_categories">
        <item>Text</item>
        <item>Audio</item>
        <item>Image</item>
        <item>Video</item>
        <item>Other</item>
    </string-array>

    <!-- Chosen files -->
    <plurals name="files_selected">
        <item quantity="one">%d file selected</item>
        <item quantity="other">%d files selected</item>
    </plurals>

    <string name="bookmark">Bookmark</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <plurals name="delete_files">
        <item quantity="one">Delete \"%2$s\" permanently?</item>
        <item quantity="other">Delete %1$d files permanently?</item>
    </plurals>

    <!-- Errors -->
    <string name="elevation_error">Could not get root rights</string>
    <string name="unknown_error">Unknown command error</string>

    <!-- Drawer -->
    <string name="place_root">Root</string>
    <string name="place_external">External storage</string>
    <string name="place_sd_card">SD card</string>
    <string name="place_internal">Internal storage</string>
    <string name="place_system">System</string>

    <string name="clipboard">Clipboard</string>

    <string name="remove">Remove</string>
    <string name="remove_item">Remove \"%s\" from drawer?</string>

    <!-- Connections -->
    <string name="new_connection">New connection</string>
    <string name="ftp" translatable="false">FTP</string>
    <string name="ftp_long" translatable="false">File Transfer Protocol</string>
    <string name="foobar" translatable="false">Foobar</string>
    <string name="foobar_long" translatable="false">Foobar</string>
    <string name="cifs" translatable="false">CIFS</string>
    <string name="cifs_long" translatable="false">Common Internet File System</string>
    <string name="local" translatable="false">Local</string>
    <string name="local_long" translatable="false">Local File System</string>
    <string name="io" translatable="false">Java IO (deprecated)</string>

    <!-- Editor -->
    <string name="editor">Editor</string>
    <string name="new_folder">New folder</string>
    <string name="folder_name">Folder name</string>
    <string name="create">Create</string>
    <string name="folder_created">Folder created</string>
    <string name="undo">Undo</string>
    <string name="new_file">New file</string>
    <string name="empty_file">(empty file)</string>
    <string name="untitled_file">Untitled File</string>
    <string name="save">Save</string>
    <string name="save_as">Save As</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_app">About Libre Explorer</string>
    <string name="advanced">Advanced</string>
    <string name="always_elevated">Always run as root</string>
    <string name="always_elevated_summary">Disable elevation on demand</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="confirm_deletion_summary">Ask for confirmation before deleting</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="show_hidden_files_summary">Show files starting with dot</string>

    <string name="copying" translatable="false">Copyright 2015, 2016 Julijonas Kikutis
        \n\nLibre Explorer is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.
        \n\nLibre Explorer is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.
        \n\nLibre Explorer is a derivative work of the following works:
        \nAndroid Support Library, Apache License, Version 2.0
        \nNumix Icon Theme, GNU General Public License, Version 3 or any later version
        \n\nAndroid is a trademark of Google Inc.
        \n\nhttp://www.gnu.org/licenses/gpl.html
        \n\nhttps://gitlab.com/julijonas/libreexplorer
    </string>

</resources>
