<!--
  Copyright 2015 Julijonas Kikutis

  This file is part of Libre Explorer.

  Libre Explorer is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Libre Explorer is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Libre Explorer.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="@string/key_about"
            android:summary="@string/app_description"
            android:title="@string/about_app"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced">
        <CheckBoxPreference
            android:defaultValue="@bool/default_confirm_deletion"
            android:key="@string/key_confirm_deletion"
            android:summary="@string/confirm_deletion_summary"
            android:title="@string/confirm_deletion"/>
        <CheckBoxPreference
            android:defaultValue="@bool/default_always_elevated"
            android:key="@string/key_always_elevated"
            android:summary="@string/always_elevated_summary"
            android:title="@string/always_elevated"/>
        <CheckBoxPreference
            android:defaultValue="@bool/default_show_hidden_files"
            android:key="@string/key_show_hidden_files"
            android:summary="@string/show_hidden_files_summary"
            android:title="@string/show_hidden_files"/>
    </PreferenceCategory>

</PreferenceScreen>
