<!--
  Copyright 2015 Julijonas Kikutis

  This file is part of Libre Explorer.

  Libre Explorer is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Libre Explorer is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Libre Explorer.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_paste"
        android:title="@string/paste"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_directory_up"
        android:title="@string/directory_up"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by"
        android:title="@string/sort_by"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>
